@@ -1,7 +1,7 @@
 from datetime import date
 from datetime import timedelta
 from opengever.activity import notification_center
-from opengever.activity import SYSTEM_ACTOR_ID
+from opengever.ogds.base.actor import SYSTEM_ACTOR_ID
 from opengever.activity.model import Activity
 from opengever.activity.model import Notification
 from opengever.dossier.activities import DossierOverdueActivity
