@@ -1,12 +1,12 @@
 from opengever.activity import ACTIVITY_TRANSLATIONS
 from opengever.activity import base_notification_center
-from opengever.activity import SYSTEM_ACTOR_ID
 from opengever.activity.base import BaseActivity
 from opengever.activity.model.notification import Notification
 from opengever.activity.roles import TASK_OLD_RESPONSIBLE_ROLE
 from opengever.activity.roles import TASK_REMINDER_WATCHER_ROLE
 from opengever.base.model import get_locale
 from opengever.ogds.base.actor import Actor
+from opengever.ogds.base.actor import SYSTEM_ACTOR_ID
 from opengever.task import _
 from opengever.task import FINISHED_TASK_STATES
 from opengever.task.response_description import ResponseDescription
